<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgg"
    android:scrollbars="none"
    >

    <LinearLayout
        android:id="@+id/cardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:src="@drawable/ic_now" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_now"
                        android:text="NOW ON MUSEUM"
                        android:textColor="@color/biru"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    android:textSize="11sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold" />

                <View style="@style/Divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:src="@drawable/ic_all" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_all"
                        android:text="ALL COLLECTION"
                        android:textColor="@color/biru"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="11sp"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_01"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="28dp"
                        android:src="@drawable/ic_01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_01"
                        android:layout_marginLeft="4dp"
                        android:text="BATIK PEDALAMAN"
                        android:textColor="@color/biru"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <View style="@style/Divider2" />
                <TextView
                    android:id="@+id/txtDalam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/pedalaman"
                    android:textSize="11sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_02"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="28dp"
                        android:src="@drawable/ic_02" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_02"
                        android:layout_marginLeft="4dp"
                        android:text="BATIK PESISIRAN"
                        android:textColor="@color/biru"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <View style="@style/Divider2" />
                <TextView
                    android:id="@+id/txtSisir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/pesisiran"
                    android:textSize="11sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_03"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="28dp"
                        android:src="@drawable/ic_03" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_03"
                        android:layout_marginLeft="4dp"
                        android:text="BATIK NUSANTARA"
                        android:textColor="@color/biru"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <View style="@style/Divider2" />
                <TextView
                    android:id="@+id/txtNusan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/nusantara"
                    android:textSize="11sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_04"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="28dp"
                        android:src="@drawable/ic_04" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_04"
                        android:layout_marginLeft="4dp"
                        android:text="BATIK KONTEMPORER"
                        android:textColor="@color/biru"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <View style="@style/Divider2" />
                <TextView
                    android:id="@+id/txtKontem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/kontemporer"
                    android:textSize="11sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_05"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="28dp"
                        android:src="@drawable/ic_05" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_05"
                        android:layout_marginLeft="4dp"
                        android:text="BATIK MANCANEGARA"
                        android:textColor="@color/biru"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <View style="@style/Divider2" />
                <TextView
                    android:id="@+id/txtManca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/mancanegara"
                    android:textSize="11sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_06"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="28dp"
                        android:src="@drawable/ic_06" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_06"
                        android:layout_marginLeft="4dp"
                        android:text="NON BATIK"
                        android:textColor="@color/biru"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <View style="@style/Divider2" />
                <TextView
                    android:id="@+id/txtNon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/nonbatik"
                    android:textSize="11sp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold" />

                <View style="@style/Divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp">

                    <ImageView
                        android:id="@+id/ic_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:src="@drawable/ic_info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_info"
                        android:text="INFORMATION"
                        android:textColor="@color/biru"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textSize="11sp"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
